# python

./: README.md
bioinformatics-specialisation/: .pre-commit-config.yaml  README.md  pre-commit-checker.sh  pyproject.toml
bioinformatics-specialisation/finding_hidden_messages/helpers/: tasks.py
bioinformatics-specialisation/finding_hidden_messages/modules/: module_2.py  module_3.py  module_4.py
bioinformatics-specialisation/finding_hidden_messages/notes/: module_1.txt  module_2.txt  module_3.txt  notes.txt
bioinformatics-specialisation/finding_hidden_messages/resources/: the_gold_bug.txt  vibrio_cholerae_pathogenic_bacterium.fasta
bioinformatics-specialisation/finding_hidden_messages/tasks/: cholerae_pathogenic_bacterium.py  tasks_2.py  the_gold_bug.py
genomic-metadat-fetcher/: README.md  pyproject.toml
genomic-metadat-fetcher/configuration/src/: configuration.py
genomic-metadat-fetcher/database/flyway/: V1__Initial.sql
genomic-metadat-fetcher/main/src/: main.py
genomic-metadat-fetcher/tests/end_to_end/: test_process_load_data.py
genomic-metadata-fetcher/: .env
genomic-metadata-fetcher/database/src/: async_connection.py
genomic-metadata-fetcher/helpers/test_helper/: async_database_helper.py  setup.py
genomic-metadata-fetcher/managers/ena/src/: fetch_data.py  runner.py
