[tool.poetry]
name = "bioinformatics-specialisation"
version = "0.1.0"
description = ""
authors = ["Rosesh Rai"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
python_version = 3.12
ignore_missing_imports = true
