[tool.poetry]
name = "genomic-metadata-fetcher"
version = "0.1.0"
description = "Data Engineering Tech Challenge"
authors = ["Rosesh Rai"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
psycopg = {version = ">=3.1.19,<3.2.0", extras = ["binary", "pool"]}
python = "^3.12"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
isort = "^5.13.2"
requests = "^2.32.3"
aiohttp = "^3.10.10"
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.pytest]
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 120